--- a/2dfullscreenwindow.ui
+++ b/2dfullscreenwindow.ui
@@ -82,7 +82,7 @@
       <x>10</x>
       <y>140</y>
       <width>191</width>
-      <height>291</height>
+      <height>341</height>
      </rect>
     </property>
     <property name="title">
@@ -130,8 +130,60 @@
        <x>10</x>
        <y>90</y>
        <width>171</width>
-       <height>191</height>
+       <height>241</height>
       </rect>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QGroupBox" name="groupBox">
+    <property name="geometry">
+     <rect>
+      <x>220</x>
+      <y>430</y>
+      <width>331</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string> 缩放</string>
+    </property>
+    <widget class="QPushButton" name="pushButton">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>20</y>
+       <width>91</width>
+       <height>32</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>放大</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_2">
+     <property name="geometry">
+      <rect>
+       <x>90</x>
+       <y>20</y>
+       <width>81</width>
+       <height>32</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>缩小</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label">
+     <property name="geometry">
+      <rect>
+       <x>180</x>
+       <y>19</y>
+       <width>141</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>当前比例：0.5</string>
      </property>
     </widget>
    </widget>
@@ -142,7 +194,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1231</width>
+     <width>1059</width>
      <height>22</height>
     </rect>
    </property>
